# clang-tidy-junit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: clang-tidy-junit.yml
tests/: test_clang_tidy_junit.py
tests/samples/: 0.xml  2.xml
