[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clang-tidy-junit"
description = "Convert Clang-Tidy output to JUnit XML"
dependencies = ["junitparser"]
version = "0.5.1"
license = "MIT"
readme = "README.md"

[project.optional-dependencies]
dev = ["black", "coverage", "mypy", "pylint"]

[project.scripts]
clang-tidy-junit = "clang_tidy_junit:main"

[project.urls]
Repository = "https://github.com/nkr0/clang-tidy-junit"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 100

[tool.mypy]
files = "src, tests"
strict = true
